# Translator

dep/: Test_Table.tbl
dep/Input/: Test1.txt  Test3.txt
dep/Output/: Test1  Test3
dep/Right_answers/: Test2_check
doc/html/: _hex_dec_8cpp.html  _hex_dec_8h.html  _hex_dec_8h_source.html  _o_w_s_8cpp.html  _o_w_s_8h.html  _o_w_s_8h_source.html  _offset_table_8cpp.html  _offset_table_8h.html  _offset_table_8h_source.html  _translation_8cpp.html  annotated.html  bin_8h.html  bin_8h_source.html  classes.html  classfw_1_1bin_1_1_offset_table-members.html  classfw_1_1bin_1_1_offset_table.html  dir_3299a1722d7c54468c0c57e34fc6eb7f.html  dir_666560e4c46088195ac1b780ad7f35fa.html  dir_9671f3e92bb46a1ea8ca77067dffed40.html  dir_a0ea560412b46186a97dbc2bd0dd27cd.html  dir_b5126df353bb36f8a25c009ed701f6b4.html  dir_d522931ffa1371640980b621734a4381.html  dir_d9968a39ad3f7d8a89d697e2cb1a300d.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  index.html  menudata.js  namespacefw.html  namespacefw_1_1bin.html  namespacefw_1_1hd.html  namespacefw_1_1ows.html  namespacemembers.html  namespacemembers_func.html  namespaces.html
doc/latex/: _hex_dec_8cpp.tex  _hex_dec_8h.tex  _hex_dec_8h_source.tex  _o_w_s_8cpp.tex  _o_w_s_8h.tex  _o_w_s_8h_source.tex  _offset_table_8cpp.tex  _offset_table_8h.tex  (+20 more)
src/: CMakeLists.txt  Curse_docktests.cpp
src/CurseLib/: CMakeLists.txt  HexDec.cpp  HexDec.h  OWS.cpp  OWS.h  OffsetTable.cpp  OffsetTable.h  Translation.cpp  bin.h
src/CurseLib/include/: HexDec.h  OWS.h  OffsetTable.h  bin.h
(+31 files in other folders)
